Environment/k3d/k8s/Monitoring/Logs/namespace.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: system-monitoring-logs
  labels:
    system: Monitoring
    monitoring: Logs
