Environment/k3d/k8s/Monitoring/Logs/compactor.yml
apiVersion: v1
kind: Service
metadata:
  namespace: system-monitoring-logs
  name: compactor
  labels:
    system: Monitoring
    monitoring: Logs
    service: Compactor
spec:
  ports:
    - port: 8080
      name: http-metrics
      targetPort: http-metrics
  clusterIP: None
  selector:
    system: Monitoring
    monitoring: Logs
    service: Compactor

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: system-monitoring-logs
  name: compactor
  labels:
    system: Monitoring
    monitoring: Logs
    service: Compactor
spec:
  selector:
    matchLabels:
      system: Monitoring
      monitoring: Logs
      service: Compactor
  serviceName: compactor
  replicas: 1
  updateStrategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        system: Monitoring
        monitoring: Logs
        service: Compactor
    spec:
      terminationGracePeriodSeconds: 30
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - topologyKey: kubernetes.io/hostname
              labelSelector:
                matchExpressions:
                  - key: name
                    operator: In
                    values:
                      - compactor
      containers:
        - name: compactor
          image: grafana/loki:2.1.0
          imagePullPolicy: IfNotPresent
          args:
            - -target=compactor
            - -log.level=debug
            - -config.file=/etc/loki/compactor.yaml
          volumeMounts:
            - name: config
              mountPath: /etc/loki
          ports:
            - name: http-metrics
              containerPort: 8080
          readinessProbe:
            httpGet:
              path: /ready
              port: http-metrics
            initialDelaySeconds: 30
          resources:
            limits:
              cpu: 500m
              memory: 1Gi
      securityContext:
        runAsNonRoot: false
        runAsUser: 0
        fsGroup: 0
      volumes:
        - name: config
          configMap:
            name: compactor
