Environment/k3d/k8s/Monitoring/Logs/distributor.yml
apiVersion: v1
kind: Service
metadata:
  namespace: system-monitoring-logs
  name: distributor
  labels:
    system: Monitoring
    monitoring: Logs
    service: Distributor
spec:
  ports:
    - port: 8080
      name: http-metrics
      targetPort: http-metrics
  selector:
    system: Monitoring
    monitoring: Logs
    service: Distributor

---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: system-monitoring-logs
  name: distributor
  labels:
    system: Monitoring
    monitoring: Logs
    service: Distributor
spec:
  selector:
    matchLabels:
      system: Monitoring
      monitoring: Logs
      service: Distributor
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
  template:
    metadata:
      labels:
        system: Monitoring
        monitoring: Logs
        service: Distributor
    spec:
      terminationGracePeriodSeconds: 30
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - topologyKey: kubernetes.io/hostname
              labelSelector:
                matchExpressions:
                  - key: name
                    operator: In
                    values:
                      - distributor
      containers:
        - name: distributor
          image: grafana/loki:2.1.0
          imagePullPolicy: IfNotPresent
          args:
            - -target=distributor
            - -log.level=debug
            - -config.file=/etc/loki/distributor.yaml
          volumeMounts:
            - name: config
              mountPath: /etc/loki
          ports:
            - name: http-metrics
              containerPort: 8080
          securityContext:
            readOnlyRootFilesystem: true
          readinessProbe:
            httpGet:
              path: /ready
              port: http-metrics
            initialDelaySeconds: 15
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
      securityContext:
        runAsNonRoot: false
        runAsUser: 0
        fsGroup: 0
      volumes:
        - name: config
          configMap:
            name: distributor
