Environment/k3d/k8s/Monitoring/Logs/node-port.yml
---
apiVersion: v1
kind: Service
metadata:
  namespace: system-monitoring-logs
  name: querier-node-port
  labels:
    system: Monitoring
    monitoring: Logs
    service: Querier
spec:
  type: NodePort
  ports:
    - port: 8080
      nodePort: 31002
      name: http-metrics
      targetPort: http-metrics
  selector:
    system: Monitoring
    monitoring: Logs
    service: Querier
