Environment/k3d/k8s/Monitoring/Logs/querier.yml
apiVersion: v1
kind: Service
metadata:
  namespace: system-monitoring-logs
  name: querier
  labels:
    system: Monitoring
    monitoring: Logs
    service: Querier
spec:
  ports:
    - port: 8080
      name: http-metrics
      targetPort: http-metrics
    - port: 9095
      name: grpc
      targetPort: grpc
    - port: 7946
      name: memberlist
      targetPort: memberlist
  clusterIP: None
  selector:
    system: Monitoring
    monitoring: Logs
    service: Querier

---
apiVersion: v1
kind: Service
metadata:
  namespace: system-monitoring-logs
  name: querier-tail
  labels:
    system: Monitoring
    monitoring: Logs
    service: Querier
spec:
  ports:
    - port: 8080
      name: http-metrics
      targetPort: http-metrics
  selector:
    system: Monitoring
    monitoring: Logs
    service: Querier

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: system-monitoring-logs
  name: querier
  labels:
    system: Monitoring
    monitoring: Logs
    service: Querier
spec:
  selector:
    matchLabels:
      system: Monitoring
      monitoring: Logs
      service: Querier
  serviceName: querier
  replicas: 3
  updateStrategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        system: Monitoring
        monitoring: Logs
        service: Querier
    spec:
      terminationGracePeriodSeconds: 30
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - topologyKey: kubernetes.io/hostname
              labelSelector:
                matchExpressions:
                  - key: name
                    operator: In
                    values:
                      - querier
      containers:
        - name: querier
          image: grafana/loki:2.1.0
          imagePullPolicy: IfNotPresent
          args:
            - -target=querier
            - -log.level=debug
            - -config.file=/etc/loki/querier.yaml
          volumeMounts:
            - name: config
              mountPath: /etc/loki
            - name: storage
              mountPath: /data
          ports:
            - name: http-metrics
              containerPort: 8080
            - name: memberlist
              containerPort: 7946
          securityContext:
            readOnlyRootFilesystem: true
          readinessProbe:
            httpGet:
              path: /ready
              port: http-metrics
            initialDelaySeconds: 30
          resources:
            limits:
              cpu: 1000m
              memory: 2Gi
            requests:
              cpu: 500m
              memory: 1Gi
      securityContext:
        runAsNonRoot: true
        runAsUser: 10001
        runAsGroup: 10001
        fsGroup: 10001
      volumes:
        - name: config
          configMap:
            name: querier
  volumeClaimTemplates:
    - metadata:
        name: storage
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 64Gi
        storageClassName: managed-premium
