Environment/k3d/k8s/Monitoring/Logs/query-frontend.yml
apiVersion: v1
kind: Service
metadata:
  namespace: system-monitoring-logs
  name: query-frontend
  labels:
    system: Monitoring
    monitoring: Logs
    service: Query-Frontend
spec:
  ports:
    - port: 8080
      name: http-metrics
      targetPort: http-metrics
  selector:
    system: Monitoring
    monitoring: Logs
    service: Query-Frontend

---
apiVersion: v1
kind: Service
metadata:
  namespace: system-monitoring-logs
  name: query-frontend-headless
  labels:
    system: Monitoring
    monitoring: Logs
    service: Query-Frontend
spec:
  ports:
    - port: 9095
      name: grpclb
      targetPort: grpc
  clusterIP: None
  publishNotReadyAddresses: true
  selector:
    system: Monitoring
    monitoring: Logs
    service: Query-Frontend

---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: system-monitoring-logs
  name: query-frontend
  labels:
    system: Monitoring
    monitoring: Logs
    service: Query-Frontend
spec:
  selector:
    matchLabels:
      system: Monitoring
      monitoring: Logs
      service: Query-Frontend
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
  template:
    metadata:
      labels:
        system: Monitoring
        monitoring: Logs
        service: Query-Frontend
    spec:
      terminationGracePeriodSeconds: 30
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - topologyKey: kubernetes.io/hostname
              labelSelector:
                matchExpressions:
                  - key: name
                    operator: In
                    values:
                      - query-frontend
      containers:
        - name: query-frontend
          image: grafana/loki:2.1.0
          imagePullPolicy: IfNotPresent
          args:
            - -target=query-frontend
            - -log.level=debug
            - -config.file=/etc/loki/query-frontend.yaml
          volumeMounts:
            - name: config
              mountPath: /etc/loki
          ports:
            - name: http-metrics
              containerPort: 8080
            - name: grpc
              containerPort: 9095
          securityContext:
            readOnlyRootFilesystem: true
          readinessProbe:
            httpGet:
              path: /ready
              port: http-metrics
            initialDelaySeconds: 15
          resources:
            limits:
              cpu: 1000m
              memory: 2Gi
            requests:
              cpu: 500m
              memory: 1Gi
      securityContext:
        runAsNonRoot: true
        runAsUser: 10001
        runAsGroup: 10001
        fsGroup: 10001
      volumes:
        - name: config
          configMap:
            name: query-frontend
