Environment/k3d/k8s/Monitoring/Logs/network-policy-system-api.yml

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    system: Monitoring
    monitoring: Logs
  name: system-api
  namespace: system-monitoring-logs
spec:
  podSelector:
    matchLabels:
      system: Monitoring
      monitoring: Logs
  policyTypes: ["Ingress"]
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              system: Api
          podSelector:
            matchLabels:
              system: Api
              service: Api-V1
