Environment/k3d/k8s/Monitoring/Logs/network-policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    system: Monitoring
    monitoring: Logs
  name: logs
  namespace: system-monitoring-logs
spec:
  podSelector:
    matchLabels:
      system: Monitoring
      monitoring: Logs
  policyTypes: ["Ingress"]
  ingress:
    - from:
        - podSelector:
            matchLabels:
              system: Monitoring
              monitoring: Logs
    - from:
        - namespaceSelector:
            matchLabels:
              system: Monitoring
          podSelector:
            matchLabels:
              monitoring: Metrics
              service: Prometheus
        - namespaceSelector:
            matchLabels:
              system: Api
          podSelector:
            matchLabels:
              system: Api
              service: Api-V1
